# recon

./: .coveragerc  .gitignore  404.html  LICENSE  Makefile  README.md  azure-pipelines.yml  build.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  streamlit_recon.py
.github/workflows/: ci.yml  docs.yml
.pytest_cache/v/cache/: nodeids
api/corpus/: index.html
api/corrections/: index.html
api/dataset/: index.html
api/hashing/: index.html
api/insights/: index.html
api/loaders/: index.html
api/operations/: index.html
api/recognizers/base/: index.html
api/recognizers/spacy/: index.html
api/stats/: index.html
api/store/: index.html
api/tokenization/: index.html
api/types/example/: index.html
api/validation/: index.html
css/: custom.css
docs/: contributing.md  features.md  index.md  release-notes.md
docs/api/: corpus.md  corrections.md  dataset.md  hashing.md  insights.md  loaders.md  operations.md  stats.md  store.md  tokenization.md  validation.md
docs/api/recognizers/: base.md  spacy.md
docs/api/types/: example.md
docs/css/: custom.css
docs/js/: custom.js
docs/overrides/: main.html
docs/src/: setup.py
docs/src/mkautodoc/: __init__.py  extension.py
docs/src/mkautodoc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/src/tutorial/: 1_stats.py  2_corpus_apply.py  2_ds_apply.py  3_dataset_mutate.py  3_dataset_mutate_save.py  3_dataset_stats.py  4_corpus.py  5_conll_loading.py  6_conll_ec.py  7_conll_dallas_example.py  8_conll_label_disparities.py
docs/tutorial/: 1_loading_data.md  2_ner_stats.md  3_corpus_apply.md  3_dataset_intro.md  3_dataset_mutate.md  4_corpus.md  4_more_stats.md  5_conll_loading.md  5_getting_insights.md  corpus.md  corpus_apply.md  custom_entity_recognizer.md  dataset_apply.md  dataset_intro.md  dataset_mutate.md  getting_insights.md  loading_data.md  ner_stats.md
docs/tutorial/conll/: label_insights.md  loading.md  stats.md
en_conll_sm/model-best/: meta.json
en_conll_sm/model-best/ner/: model
en_conll_sm/model-last/: config.cfg  meta.json
en_conll_sm/model-last/ner/: model  moves
en_conll_sm/model-last/vocab/: strings.json
examples/: 1.0_usage.ipynb  2.0_operations.ipynb  3.0_hardest_examples.ipynb  5.0_operation_factories.ipynb  6.0_augmentations.ipynb  6.1_augmentations.ipynb  6.2_augmentations_test.ipynb  7.0_conll.ipynb  7.0_pretty_print.ipynb  argument_resolution.ipynb  fashion_brands.ipynb  scripts_spacy.py
examples/.ipynb_checkpoints/: 1.0_usage-checkpoint.ipynb  cs_data_test-checkpoint.ipynb
examples/config/: base_config.cfg  config.cfg
examples/data/: dev.jsonl  test.jsonl  train.json
examples/data/conll2003/: dev.jsonl  dev.spacy  test.jsonl  train.spacy
examples/data/conll2003/.recon/: meta.json
examples/data/conll2003/.recon/dev/: state.json
examples/data/conll2003/.recon/test/: state.json
examples/data/conll2003/.recon/train/: state.json
examples/data/fashion_brands/: README.md  dev.jsonl  fashion_brands_training.jsonl
examples/data/food_ingredients/: data.jsonl  dev.jsonl  train.jsonl
examples/data/food_ingredients/small/: dev.jsonl  train.jsonl
examples/data/food_ingredients/small/.recon/: example_store.jsonl
examples/data/skills/: test.jsonl  train.jsonl
examples/experimental/: 6.0_augmentations.ipynb  6.1_augmentations.ipynb  fashion_brands.ipynb
examples/fixed_data/fashion_brands_ent_label_augment/: dev.jsonl  train.jsonl
examples/fixed_data/fashion_brands_ent_label_augment/.recon/: meta.json
examples/fixed_data/fashion_brands_ent_label_augment/.recon/train/: state.json
examples/fixed_data/fashion_brands_s2v_ent_label_aug_no_dev_ents/: dev.jsonl
examples/fixed_data/food_ingredients_ent_label_augment/: train.jsonl
examples/fixed_data/food_ingredients_ent_label_augment/.recon/: example_store.jsonl
examples/fixed_data/food_ingredients_ent_label_augment_small/: train.jsonl
examples/fixed_data/food_ingredients_ent_label_augment_small/.recon/: example_store.jsonl  meta.json
examples/fixed_data/skills/: dev.jsonl  test.jsonl  train.jsonl
examples/fixed_data/skills/.recon/: example_store.jsonl
examples/fixed_data/skills/.recon/dev/: state.json
examples/fixed_data/skills_2/: dev.jsonl  test.jsonl  train.jsonl
examples/fixed_data/skills_2/.recon/: example_store.jsonl
js/: custom.js
recon/: __init__.py  augmentation.py  constants.py  corpus.py  corrections.py  dataset.py  hashing.py  insights.py  linker.py  loaders.py  operations.py  pipelines.py  preprocess.py  prodigy_recipes.py  recognizer.py  registry.py  sample.py  scorer.py  stats.py  store.py  tokenization.py  types.py  util.py  utils.py  validation.py
recon/cli/: __init__.py  _util.py  dashboard.py  stats.py
recon/operations/: __init__.py  core.py  corrections.py  tokenization.py  utils.py  validation.py
recon/prodigy/: __init__.py  ner_mirror.py  recipes.py  util.py  utils.py
recon/prodigy/static/: stats.html
recon/prodigy/templates/: prediction_error.html
reconner/: __init__.py  constants.py  dataset.py  insights.py  loaders.py  recognizer.py  stats.py  types.py  validation.py
release-notes/: index.html
scripts/: docs-live.sh  format-imports.sh  format.sh  gh-deploy-docs.sh  lint.sh  push-tag.sh  test.sh
src/tutorial/: 1_stats.py  3_dataset_mutate_save.py  4_corpus.py  6_conll_ec.py  7_conll_dallas_example.py
templates/: docstring.mustache
tests/: conftest.py  test_augmentation.py  test_corpus.py  test_corrections.py  test_dataset.py  test_example.py  test_insights.py  test_operations.py  test_prodigy.py  test_recognizer.py  test_stats.py  test_stats_2.py  test_tokenization.py  test_validation.py
tutorial/conll/label_insights/: index.html
tutorial/conll/loading/: index.html
tutorial/conll/model_insights/: index.html
tutorial/conll/stats/: index.html
tutorial/corpus/: index.html
tutorial/custom_entity_recognizer/: index.html
tutorial/dataset_intro/: index.html
tutorial/dataset_mutate/: index.html
tutorial/loading_data/: index.html
tutorial/ner_stats/: index.html
(+14 files in other folders)
