[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reconner"
version = "0.14.1"
description = "Recon NER, Debug and correct annotated Named Entity Recognition (NER) data for inconsitencies and get insights on improving the quality of your data."
authors = [{ name = "Kabir Khan", email = "kabirkhan1137@outlook.com" }]
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "numpy >= 1.20.0",
    "pydantic >= 2.0, <3.0",
    "spacy >= 3.2.0, < 4.0",
    "scipy >= 1.7.0, < 2.0",
    "xxhash >= 3.0.0, < 4.0",
    "radicli > 0.0.8, <0.1"
]
scripts = { recon = "recon.cli:main" }

[project.urls]
documentation = "https://kabirkhan.github.io/recon"
homepage = "https://kabirkhan.github.io/recon"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "mkdocs",
    "mkdocs-material",
    "markdown-include >= 0.5.1, < 0.6.0",
    "mkdocstrings-python",
    "pyright >= 1.1.303, <1.3",
    "ruff >= 0.1, <1.0"
]
hf = [
    "datasets >= 2.0, <3.0"
]
plot = [
    "seaborn >= 0.9, <1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["recon"]

[tool.pyright]
include = ["recon", "tests", "docs/src"]
reportInvalidStringEscapeSequence = false
reportMissingImports = false
useLibraryCodeForTypes = true

[tool.ruff]
line-length = 88
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "recon/prodigy/recipes.py"
]
src = ["recon", "tests", "docs/src"]
# Assume Python 3.11.
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I001"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions"]
known-first-party = ["recon"]
